[package]
name = "defect-suite"
version = "0.1.0"
edition = "2021"
authors = ["Mark Stouffer <1802850+InTEGr8or@users.noreply.github.com>"]
license = ""
description = ""
homepage = ""
documentation = ""
repository = ""
readme = ""
keywords = [""]
categories = [""]
include = [
    "**/*.rs",
    "Cargo.toml",
]
exclude = [
    "public/assets/*",
    "videos/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11.8", features = ["blocking", "json"]}
serde = {version = "1.0.132", features = ["derive"]}
tokio = {version= "1.15.0", features = ["full"]}
