[package]
name = "rally-defect-suite"
version = "0.1.0"
edition = "2021"
authors = ["Mark Stouffer <1802850+InTEGr8or@users.noreply.github.com>"]
license = "MIT"
description = "A Defect Suite handler for Rally"
homepage = "https://github.com:InTEGr8or/defect-suite-rust"
documentation = "https://github.com:InTEGr8or/defect-suite-rust"
repository = "https://github.com:InTEGr8or/defect-suite-rust"
readme = "README.md"
keywords = ["rally"]
categories = ["cli"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
exclude = [
    "public/assets/*",
    "videos/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11.8", features = ["blocking", "json"]}
serde = {version = "1.0.132", features = ["derive"]}
tokio = {version= "1.15.0", features = ["full"]}
